upgrade: swagger works
