# internal/controller/http/supervisor.go
@@ -3,9 +3,9 @@ package http
 import (
 	"github.com/labstack/echo/v4"
 	"net/http"
+	"ssr/config"
 	"ssr/internal/controller/http/middlewares"
 	"ssr/pkg/logger"
-	"ssr/pkg/misc"
 	"strconv"
 )
 
@@ -13,20 +13,21 @@ type supervisor struct {
 	l              logger.Interface
 	profileService SvProfileService
 	//bidService     SvBidService
-	//workService    SvWorkService
+	workService SvWorkService
 }
 
 // ShowAccount godoc
-// @Summary      GetUserByEmail supervisor's profile
+// @Summary      Get supervisor's profile
 // @Tags         supervisor
 // @Produce      json
+// @Param        supervisor_id path int  true  "Supervisor ID"
 // @Success      200  {object}  dto.SvProfile
-// @Router       /api/supervisor/profile [get]
-// @Security	 Auth
+// @Router       /api/v1/supervisors/{supervisor_id}/profile [get]
+// @Security	 OAuth2Password
 func (ctrl *supervisor) getProfile(ctx echo.Context) error {
-	rawUserID, _ := misc.ExtractCtx(ctx)
-	userID, _ := strconv.Atoi(rawUserID)
-	respDTO, err := ctrl.profileService.GetSupervisorProfile(userID)
+	supervisorID, _ := strconv.Atoi(ctx.Param("student_id"))
+
+	respDTO, err := ctrl.profileService.GetSupervisorProfile(supervisorID)
 	if err != nil {
 		ctrl.l.Error(err)
 		return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
@@ -36,29 +37,25 @@ func (ctrl *supervisor) getProfile(ctx echo.Context) error {
 }
 
 // // ShowAccount godoc
-// // @Summary      GetUserByEmail supervisor's works
+// // @Summary      Get supervisor's works
 // // @Tags         supervisor
-// // @Param        supervisor_id query int  true  "Supervisor ID"
+// // @Param        supervisor_id path int  true  "Supervisor ID"
 // // @Produce      json
 // // @Success      200  {object}  dto.SvWorkPlenty
-// // @Router       /api/supervisor/work [get]
-// // @Security	 Auth
-//
-//	func (ctrl *supervisor) getWorks(ctx echo.Context) error {
-//		email, _ := misc.ExtractCtx(ctx)
-//		ctrl.l.Debug(fmt.Sprintf("Email: %s", email))
-//
-//		supervisorID, _ := strconv.Atoi(ctx.QueryParam("supervisor_id"))
-//
-//		respDTO, err := ctrl.workService.GetSupervisorWorks(supervisorID)
-//		if err != nil {
-//			ctrl.l.Error(err)
-//			return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
-//		}
-//
-//		return ctx.JSON(http.StatusOK, respDTO)
-//	}
-//
+// // @Router       /api/v1/supervisors/{supervisor_id}/work [get]
+// // @Security	 	OAuth2Password
+func (ctrl *supervisor) getWorks(ctx echo.Context) error {
+	supervisorID, _ := strconv.Atoi(ctx.Param("student_id"))
+
+	respDTO, err := ctrl.workService.GetSupervisorWorks(supervisorID)
+	if err != nil {
+		ctrl.l.Error(err)
+		return echo.NewHTTPError(http.StatusInternalServerError, "TODO")
+	}
+
+	return ctx.JSON(http.StatusOK, respDTO)
+}
+
 // // ShowAccount godoc
 // // @Summary      GetUserByEmail supervisor's bids
 // // @Tags         supervisor
@@ -119,19 +116,20 @@ func (ctrl *supervisor) getProfile(ctx echo.Context) error {
 func NewSupervisorRoutes(
 	router *echo.Group,
 	l logger.Interface,
+	config *config.Config,
 	profileService SvProfileService,
 	// bidService SvBidService,
-	// workService SvWorkService,
+	workService SvWorkService,
 ) {
-	ctrl := &supervisor{l, profileService}
+	ctrl := &supervisor{l, profileService, workService}
 
-	g := router.Group("/supervisor", middlewares.CheckRole)
+	g := router.Group("/supervisors", middlewares.MakeAuthMiddleware(config), middlewares.CheckRole)
 
 	{
-		g.GET("/profile", ctrl.getProfile)
+		g.GET("/supervisor_id/profile", ctrl.getProfile)
+		g.GET("/supervisor_id/works", ctrl.getWorks)
 		//g.GET("/bid", ctrl.getBids)
 		//g.POST("/bid/resolve", ctrl.resolveBid)
-		//g.GET("/work", ctrl.getWorks)
 		//g.GET("/work", ctrl.getWorks)
 	}
 
