# internal/dto/auth.go
@@ -1,7 +1,8 @@
 package dto
 
 type LoginResponse struct {
-	Token  string `json:"token"`
-	UserID int    `json:"user-id"`
-	Role   string `json:"role"`
+	Token     string `json:"access_token"`
+	TokenType string `json:"token_type"`
+	UserID    int    `json:"user_id"`
+	Role      string `json:"role"`
 }
