# internal/dto/subject.go
@@ -1,7 +1,7 @@
 package dto
 
 type SubjectResp struct {
-	SubjectID  int    `json:"subjectID"`
+	SubjectID  int    `json:"id"`
 	Name       string `json:"name"`
 	Department string `json:"department"`
 }
